update styling to use quadratic brand colors, fix footer spacing

--- a/src/style/core.scss
+++ b/src/style/core.scss
@@ -33,4 +33,5 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
 
-$primary: #fed136 !default;
+$primary: #f6961d !default;
+$secondary: #293c77 !default;
